<resources>
    <string name="app_name">Clone Poseidon</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="doan">Đồ ăn</string>
    <string name="douong">Đồ uống</string>
    <string name="thucdonhangngay">Thực đơn hàng ngày</string>
    <string name="thucdoncuoituan">Thực đơn cuối tuần</string>
    <string name="email">Email</string>
    <string name="pw">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="hoac">Hoặc</string>
    <string name="appid">1810972335617982</string>
    <string name="logingoogle">Đăng nhập bằng Google</string>
    <string name="loginfacebook">Đăng nhập bằng Facebook</string>
    <string name="dangkytaikhoan">Đăng ký mới</string>
    <string name="nhaplaipw">Nhập lại mật khẩu</string>
    <string name="dangky">Đăng ký</string>
    <string name="thongbaoloidangky">Bạn chưa nhập </string>
    <string name="dodaimatkhau">Mật khẩu phải lớn hơn 6 ký tự</string>
    <string name="thongbaorepw">Mật khẩu nhập lại không đúng</string>
    <string name="thongbaodangkythanhcong">Đăng ký tài khoản thành công</string>
    <string name="thongbaodangnhapthatbai">Tài khoản không hợp lệ</string>
    <string name="quaylaitrangchu">Quay lại</string>
    <string name="dangnhapdangkynhanuudai">Đăng nhập / Đăng ký để nhận nhiều ưu đãi</string>
    <string name="nhaptaikhoanmatkhau">Sai tài khoản hoặc mật khẩu</string>
    <string name="phanhoi">Đánh giá / Phản hồi</string>
    <string name="hotro">Hỗ trợ 24/7</string>
    <string name="thongtincanhan">Thông tin tài khoản</string>
    <string name="caidat">Cài đặt</string>
    <string name="diemtichluy">Điểm tích lũy</string>
    <string name="ratetieude">Tiêu đề</string>
    <string name="ratenoidung">Nội dung</string>
    <string name="rateview1">Góp ý của bạn về về nhà hàng</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="lichsudatban">Lịch sử đặt bàn</string>
    <string name="map_api_key">AIzaSyB3S9_UeTcNMLQgGVwii-doTIz5pnOvEPk</string>


    <!--bottom_navigation.xml-->
    <string name="bottom_navigation_title_home">Trang chủ</string>
    <string name="bottom_navigation_title_notification">Thông báo</string>
    <string name="bottom_navigation_title_profile">Cá nhân</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
