<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DangNhapActivity"
    android:background="@drawable/bgimg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgLogin"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logofood" />

        <EditText
            android:background="@drawable/bg_edt"
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/iconuser"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <EditText
            android:background="@drawable/bg_edt"
            android:id="@+id/txtpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/iconpw"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/pw"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite" />

        <Button
            android:id="@+id/btlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/radius_button"
            android:drawableLeft="@drawable/iconlogin"
            android:drawablePadding="10dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorToolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/hoac"
                android:textColor="@color/colorWhite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/colorWhite" />
        </LinearLayout>

        <Button
            android:id="@+id/btlogingoogle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:layout_marginTop="3dp"
            android:background="@color/colorWhite"
            android:drawableLeft="@drawable/icongoogle"
            android:paddingLeft="5dp"
            android:text="@string/logingoogle"
            android:textColor="@color/colorToolbar" />

        <Button
            android:textColor="@color/colorToolbar"
            android:id="@+id/btloginfacebook"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorblue"
            android:drawableLeft="@drawable/iconfacebook"
            android:paddingBottom="13dp"
            android:paddingLeft="5dp"
            android:paddingTop="13dp"
            android:text="@string/loginfacebook" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/dangkytk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/dangkytaikhoan" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>